<?xml version="1.0"?>
<package format="3">
  <name>nucleus_driver_meta</name>
  <version>0.0.1</version>
  <description>Meta-package for NortekSupport/nucleus_driver ROS2 packages and a launch file</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>interfaces</exec_depend>
  <exec_depend>nucleus_driver_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
